@@ -1,6 +1,6 @@
 Package: dbarts
 Version: 0.9-21
-Date: 2021-11-31
+Date: 2022-03-12
 Title: Discrete Bayesian Additive Regression Trees Sampler
 Authors@R: c(
   person("Vincent", "Dorie", role = c("aut", "cre"), email = "vdorie@gmail.com", comment = c(ORCID = "0000-0002-9576-3064")),
